# RingRift

./: .env.example  .env.production.example  .env.staging  .env.staging.example  .eslintignore  .eslintrc.json  .gitignore  AGENTS.md  AI In Depth Improvement Analysis.md  AI_ARCHITECTURE.md  AI_ASSESSMENT_REPORT.md  AI_IMPROVEMENT_BACKLOG.md  AI_IMPROVEMENT_PLAN.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_REMEDIATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLIENT_TEST_PLAN.md  CLUSTER_STATUS_CRITICAL.txt  CODEBASE_EVALUATION.md  CONTRIBUTING.md  CURRENT_RULES_STATE.md  CURRENT_STATE_ASSESSMENT.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FINAL_ARCHITECT_REPORT.md  FINAL_RULES_AUDIT_REPORT.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  KNOWN_ISSUES.md  P2P_INVESTIGATION_SUMMARY.md  P2P_STATUS_SUMMARY.txt  P2P_STATUS_TABLE.md  PLAN.md  PLAN_selfplay_loop_closure.md  PLAYABLE_GAME_IMPLEMENTATION_PLAN.md  PRIVACY_POLICY.md  PROJECT_GOALS.md  (+53 more)
ai-service/: .env.local-e  .flake8  .gitignore  .pre-commit-config.yaml  =3.3.0  AGENTS.md  AI_ASSESSMENT_REPORT.md  AI_IMPROVEMENT_PLAN.md  ARCHIVAL_SUMMARY_2025-12-26.md  ASYNC_SYNC_BOUNDARY_FIX.md  CLAUDE.md  COMPREHENSIVE_ACTION_PLAN_2025_12_25.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DEPENDENCY_UPDATES.md  Dockerfile  FIXES.md  MIGRATION.md  P2P_DEPLOYMENT_REPORT.md  PHASE1_SUMMARY.md  PLAN_NEXT_STEPS.md  QUICK_WINS_CONSOLIDATION_REPORT.md  README.md  REGRESSION_ROLLBACK_IMPLEMENTATION.md  SECURITY.md  SPRINT_17.3_PLAN.md  SYNC_CONSOLIDATION_PLAN.md  SYNC_CONSOLIDATION_SUMMARY.md  SYNC_MODULES_ANALYSIS.md  TRAINING_DATA_REGISTRY.md  analyze_smoke_test.py  cluster_health_log.jsonl  cluster_monitoring_log.md  cluster_stability_log.jsonl  cluster_update_report.md  db_health.canonical_square19.json  db_health.canonical_square8.json  diagnose_weight_application.py  heuristic_weights_optimized.json  nohup_master.out  (+15 more)
ai-service/app/: DEPRECATION_AUDIT.md  _game_engine_legacy.py  board_manager.py  errors.py  game_engine.py  main.py  metrics.py  metrics_base.py  models.py  tracing.py
ai-service/cloud/: README.md  __init__.py
ai-service/config/: alerts.yaml  architecture_training.yaml  cloudflared-config.yaml  cluster.yaml  cluster_nodes.yaml  data_aggregator.yaml  distributed_hosts.template.yaml  distributed_hosts.yaml  distributed_hosts.yaml.bak  distributed_hosts.yaml.example  elo_alerts.yml  hyperparameters.json  nginx-cluster.conf  node_policies.yaml  notification_hooks.yaml  p2p_orchestrator.env.example  pipeline.json  promotion_daemon.yaml  remote_hosts.example.yaml  remote_hosts.yaml.example  robust_cmaes_extended.json  selfplay_workers.example.yaml  sync_hosts.env.example  tier_training_pipeline.square8_2p.json  training_hyperparams.yaml  unified_loop.slurm.example.yaml  unified_loop.yaml
ai-service/data/: .jsonl_converted  .manifest_cache.json  HEX_DATA_DEPRECATION_NOTICE.md  aggregated_gauntlet_results.json  alert_state.json  curriculum_weights.json  data_manifest.db.bak  elo_drift_history.json  elo_sync_state.json  model_promotion_history.json  parity_gate_test.db.parity_summary.json  parity_validation_results.json  promoted_models.json  registry_sync_state.json  tournament_square8_2p.json  trained_heuristic_profiles.json
ai-service/deploy/: README.md  RESILIENCE.md  deploy_cluster_resilience.py  install-grafana-dashboard.sh  install-services.sh  setup_node_resilience.sh  setup_node_resilience_macos.sh  unified-node-health.service
ai-service/docker/: Dockerfile.cmaes-worker  Dockerfile.inference  Dockerfile.training  Dockerfile.worker  docker-compose.gpu.yml
ai-service/docs/: AI_SERVICE_ENVIRONMENT_REFERENCE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BOTTLENECK_ANALYSIS.md  CIRCULAR_DEPENDENCY_ANALYSIS.md  CLOUD_TRAINING_INFRASTRUCTURE_PLAN.md  CLUSTER_INTEGRATION_CHECKLIST.md  CLUSTER_INTEGRATION_GUIDE.md  CLUSTER_MIGRATION_PLAN.md  CLUSTER_SETUP_GUIDE.md  CLUSTER_TRAINING_GUIDE.md  CLUSTER_TRANSPORT_ARCHITECTURE.md  CLUSTER_UTILIZATION.md  CODEBASE_QUALITY_REPORT.md  COMPOSITE_ELO_SYSTEM.md  CONFIG_REFERENCE.md  CONFIG_SOURCES.md  CONSOLIDATION_PLAN_2025_12.md  CONSOLIDATION_ROADMAP.md  CONSOLIDATION_STATUS_2025_12_19.md  CONSOLIDATION_STATUS_2025_12_27.md  CONSOLIDATION_STATUS_2025_12_28.md  COORDINATION_API_REFERENCE.md  COORDINATION_ARCHITECTURE.md  COORDINATION_MODULE_INVENTORY.md  COORDINATOR_ARCHITECTURE.md  CURRICULUM_FEEDBACK.md  DAEMON_INTEGRATION_GUIDE.md  DAEMON_REGISTRY.md  DAEMON_REGISTRY_REFERENCE.md  DAEMON_STARTUP_ORDER_VERIFICATION.md  DATA_FRESHNESS_CHECK.md  DATA_PIPELINE_FLOW.md  DATA_SYNC_ASSESSMENT.md  DATA_VALIDATION.md  DEBUGGING.md  DEPRECATED_MODULES_MIGRATION.md  DEVELOPER_GUIDE.md  DISTRIBUTED_SELFPLAY.md  (+85 more)
ai-service/examples/: cluster_monitor_example.py
ai-service/infrastructure/: README.md
ai-service/parity_failures/: canon_dbg__2b7223d6-8951-4ddd-a7e0-81810bf36a32__k49.parity_failure.json  canonical_square8__97099b63-a23d-4aba-ab0f-3bbe33769182__k48.parity_failure.json  canonical_square8_regen__3bfefc3d-817c-4052-9ca8-dae72b06dd56__k104.parity_failure.json  db_debug__315b4f8b-bf5d-45d6-a36f-1d946df6ae8c__k55.parity_failure.json  db_debug__3f8c1fbe-03c0-45d1-9819-b1c7b0cd70b5__k111.parity_failure.json  db_debug__45d09b4e-4cbf-4ed8-bd53-9593893089e9__k71.parity_failure.json  db_debug__55ac9bf6-eae3-4221-94df-2009d31e62a3__k93.parity_failure.json  db_debug__5b9e2b6b-8290-4e5d-8b4c-29373ee7e7a9__k122.parity_failure.json  db_debug__c0b80494-0380-49be-af08-f50afbeea043__k99.parity_failure.json  db_debug__e143509e-d968-4e30-81a8-5fb1bb61bdef__k56.parity_failure.json  health_check_2p__3964e2a4-48fc-43fa-9d98-71b88d4a772a__k61.parity_failure.json  health_check_2p__5abd84c6-8127-4448-a195-0df70bab7a13__k89.parity_failure.json  health_check_4p__a3537aa9-2b65-48f3-939d-323e66edcd27__k81.parity_failure.json  selfplay_bugcheck__35a14679-e34e-4d01-8cb4-0ceb6c6d65c3__k168.parity_failure.json  selfplay_bugcheck__581facac-499b-4412-8146-a92fe9082a7b__k85.parity_failure.json  (+1 more)
ai-service/parity_fixtures/: COVERAGE.md  (+34 more)
(+4810 files in other folders)
