# AI Service Python project configuration
# This file configures mypy for static type checking to maintain parity with
# the TypeScript codebase.

[project]
name = "ringrift-ai-service"
version = "0.1.0-beta"
description = "RingRift AI Service - Game analysis and self-play engine"
requires-python = ">=3.10"

[tool.mypy]
# Start with a permissive configuration to establish baseline
# These settings can be tightened as type coverage improves
#
# Current baseline (2025-12-06): 557 errors in 36 files
# Strategy: Start with a passing config, then incrementally tighten:
# 1. Enable mypy with relaxed settings (this config)
# 2. Fix critical parity modules (board_manager, rules_engine, game_state)
# 3. Gradually enable stricter checks per-module

python_version = "3.10"

# Module discovery
files = ["app"]
exclude = [
    "tests",
    "venv",
    "__pycache__",
    ".hypothesis",
]

# Error handling - very permissive for initial integration
ignore_missing_imports = true  # Third-party libs without stubs
warn_return_any = false        # Too noisy initially
warn_unused_ignores = false    # Don't flag old type: ignore comments
show_error_codes = true
pretty = true

# Note: mypy will emit [annotation-unchecked] notes for untyped functions.
# These are informational and don't cause failure. Suppress with --no-error-summary
# or ignore them during initial integration.

# Type checking strictness - very relaxed for initial integration
strict = false
check_untyped_defs = false     # Don't check untyped function bodies yet
disallow_untyped_decorators = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

# Suppress most error categories for initial integration
# These will be enabled incrementally as type coverage improves
# Last updated: 2025-12-19 (79 base errors after fixing exit-return and MarkerInfo)
disable_error_code = [
    "import-untyped",  # Missing type stubs
    "arg-type",        # Enable after type annotations added
    "call-arg",        # Enable after type annotations added
    "assignment",      # Enable after type annotations added
    "union-attr",      # Enable after Optional handling improved
    "attr-defined",    # Enable after type stubs added
    "dict-item",       # Enable later
    "valid-type",      # Enable later
    "no-redef",        # Enable later
    "list-item",       # Enable later
    "index",           # Enable later
    "type-var",        # numpy shape inference issue
    "misc",            # 262 errors - decorators/generics issues
    "operator",        # 28 errors - numeric type issues
    "var-annotated",   # Enable later
    "return-value",    # 75 errors - Optional/type mismatches
    # Fixed 2025-12-19: exit-return errors (bool->None), MarkerInfo import
]

# Per-module overrides - stricter checking on critical parity modules
# These modules must maintain type parity with TypeScript equivalents
[[tool.mypy.overrides]]
module = "app.board_manager"
check_untyped_defs = true
# Note: Still using disable_error_code from global; enable stricter
# checks incrementally as types are added

[[tool.mypy.overrides]]
module = "app.rules_engine"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.game_state"
check_untyped_defs = true

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".hypothesis",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore rules that conflict with existing code style
ignore = [
    "E501",   # Line too long - handled by formatter
    "B008",   # Function call in default argument - common pattern in FastAPI
    "B904",   # Within except, raise from - too noisy
    "SIM108", # Use ternary operator - reduces readability
    "UP007",  # Use X | Y for Union - keep Optional for clarity
    "RUF012", # Mutable class attributes - false positives with Pydantic
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports and assertions
"tests/**/*.py" = ["F401", "F811", "B011"]
# Scripts may have broader imports
"scripts/**/*.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
