# AI Service Python project configuration
# This file configures mypy for static type checking to maintain parity with
# the TypeScript codebase.

[project]
name = "ringrift-ai-service"
version = "0.1.0-beta"
description = "RingRift AI Service - Game analysis and self-play engine"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
    "pytest-cov==7.0.0",
]

[tool.mypy]
# Start with a permissive configuration to establish baseline
# These settings can be tightened as type coverage improves
#
# Current baseline (2025-12-06): 557 errors in 36 files
# Strategy: Start with a passing config, then incrementally tighten:
# 1. Enable mypy with relaxed settings (this config)
# 2. Fix critical parity modules (board_manager, rules_engine, game_state)
# 3. Gradually enable stricter checks per-module

python_version = "3.10"

# Module discovery
files = ["app"]
exclude = [
    "tests",
    "venv",
    "__pycache__",
    ".hypothesis",
]

# Error handling - very permissive for initial integration
ignore_missing_imports = true  # Third-party libs without stubs
warn_return_any = false        # Too noisy initially
warn_unused_ignores = false    # Don't flag old type: ignore comments
show_error_codes = true
pretty = true

# Note: mypy will emit [annotation-unchecked] notes for untyped functions.
# These are informational and don't cause failure. Suppress with --no-error-summary
# or ignore them during initial integration.

# Type checking strictness - progressively tightening
strict = false
check_untyped_defs = true      # Enabled 2025-12-20 (16 errors manageable)
disallow_untyped_decorators = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

# Suppress most error categories for initial integration
# These will be enabled incrementally as type coverage improves
# Last updated: 2025-12-19 (79 base errors after fixing exit-return and MarkerInfo)
disable_error_code = [
    "import-untyped",  # Missing type stubs
    "arg-type",        # Enable after type annotations added
    "call-arg",        # Enable after type annotations added
    "assignment",      # Enable after type annotations added
    "union-attr",      # Enable after Optional handling improved
    "attr-defined",    # Enable after type stubs added
    "dict-item",       # Enable later
    "valid-type",      # Enable later
    "no-redef",        # Enable later
    "list-item",       # Enable later
    "index",           # Enable later
    "type-var",        # numpy shape inference issue
    "misc",            # 262 errors - decorators/generics issues
    "operator",        # 90 errors - numeric type issues
    "var-annotated",   # Enable later
    "return-value",    # 69 errors - Optional/type mismatches (being fixed incrementally)
    "has-type",        # 16 errors - uninitialized attributes (from check_untyped_defs)
    "truthy-function", # 3 errors - function truthiness checks (from check_untyped_defs)
    # Fixed 2025-12-19: exit-return errors (bool->None), MarkerInfo import
    # Enabled 2025-12-20: check_untyped_defs globally
]

# Per-module overrides - stricter checking on critical parity modules
# Modules with return-value checking enabled (fixed 2025-12-19):
# - app.training.dynamic_export
# - app.training.value_calibration
# - app.training.gradient_surgery
# These modules must maintain type parity with TypeScript equivalents
# Note: check_untyped_defs is now enabled globally (2025-12-20)
# Per-module overrides can be used for stricter checks as needed
[[tool.mypy.overrides]]
module = ["app.board_manager", "app.rules_engine", "app.game_state"]
# Future: enable stricter checks here as types improve
# disallow_untyped_defs = true

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".hypothesis",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except - catch broad exception handling (Phase 21.2)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore rules that conflict with existing code style
ignore = [
    "E501",   # Line too long - handled by formatter
    "E402",   # Module import not at top - intentional lazy imports to prevent OOM
    "B008",   # Function call in default argument - common pattern in FastAPI
    "B904",   # Within except, raise from - too noisy
    "SIM108", # Use ternary operator - reduces readability
    "UP007",  # Use X | Y for Union - keep Optional for clarity
    "RUF012", # Mutable class attributes - false positives with Pydantic
    # TODO: Migrate to fire_and_forget() from app.utils.async_utils
    "RUF006", # Asyncio dangling task - intentional fire-and-forget patterns
    # Unicode in comments/docstrings - intentional for dimensions (8×8) and math notation
    "RUF001", # String contains ambiguous unicode
    "RUF002", # Docstring contains ambiguous unicode
    "RUF003", # Comment contains ambiguous unicode
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports and assertions
"tests/**/*.py" = ["F401", "F811", "B011"]
# Scripts may have broader imports
"scripts/**/*.py" = ["F401"]
# __init__.py files re-export symbols intentionally and group by migration status
"**/__init__.py" = ["F401", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.importlinter]
# Architecture tests - enforce dependency rules
# Run with: lint-imports
root_package = "app"

[[tool.importlinter.contracts]]
name = "AI layer should not import from training"
type = "forbidden"
source_modules = ["app.ai"]
forbidden_modules = ["app.training"]
ignore_imports = [
    # Allow specific exceptions for cache utilities
    "app.ai.cache_invalidation -> app.training.eval_cache",
    "app.ai.cache_invalidation -> app.training.export_cache",
    # Legacy module - scheduled for deprecation (see DEPRECATION_AUDIT.md)
    "app.ai._neural_net_legacy -> app.training.encoding",
    "app.ai._neural_net_legacy -> app.training.model_versioning",
    # TODO: Move generate_data shared logic to app.core or app.data
    "app.ai.hybrid_gpu -> app.training.generate_data",
    "app.ai.nnue_policy -> app.training.generate_data",
    # Cache invalidation chain - uses config which imports training
    "app.ai.cache_invalidation -> app.distributed.data_events",
]

[[tool.importlinter.contracts]]
name = "Models should be dependency-free"
type = "independence"
modules = ["app.models"]
# TODO: models.loader currently imports from ai and training for model loading
# This should be refactored to move loading logic to models layer
ignore_imports = [
    "app.models.loader -> app.ai.nnue",
    "app.models.loader -> app.ai.nnue_policy",
    "app.models.loader -> app.training.model_registry",
]

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "app.main",
    "app.ai",
    "app.game_engine",
    "app.models",
]
# Allow same-layer imports and downward dependencies
# TODO: Refactor these dependencies to follow layered architecture
ignore_imports = [
    # Models layer importing from higher layers
    "app.models.loader -> app.ai.nnue",
    "app.models.loader -> app.ai.nnue_policy",
    "app.models.loader -> app.training.model_registry",
    # Legacy game engine imports caches from ai layer
    # TODO: Move cache modules to game_engine or core layer
    "app._game_engine_legacy -> app.ai.move_cache",
    "app.board_manager -> app.ai.territory_cache",
]

[tool.mutmut]
# Mutation testing configuration for mutmut 2.x
# Run with: mutmut run --paths-to-mutate=app/ai/neural_losses.py
# View results: mutmut results

# Source files to mutate (start with small, critical modules)
paths_to_mutate = "app/ai/neural_losses.py"

# Tests to run for mutation detection
runner = "python -m pytest tests/unit/ai/test_neural_losses.py -x -q --tb=no"

# Skip mutations in these patterns
dict_synonyms = "Struct, NamedStruct"
